tests/paczka1/fuzzy1/89904544.err
Error in line 1: kx37mCyi S458 71,1
Error in line 4: A462 S185 15,9
Error in line 18: 50OJjy56 A462 63,9
Error in line 19: 50OJjy56 S185 3,3
Error in line 29: 9JDsiHg53E A462 -1,0
